# cmake-seed

lib_template/: CMakeLists.txt  project-config.cmake.in
